# graphoni

./: .gitignore  README.md  cli.py  client.py  docker-compose.prod.yml  docker-compose.yml  mcp_server.py  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml
web/: Dockerfile  next.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/admin/api-keys/: route.ts
web/app/api/admin/api-keys/[id]/: route.ts
web/app/api/me/: route.ts
web/app/auth/signin/: page.tsx
web/app/view/[slug]/: page.tsx
web/components/: connections-panel.tsx  detail-panel.tsx  graph-canvas-sigma.tsx
web/lib/: auth-guard.ts
web/lib/db/: schema.ts  seed.ts
web/scripts/: start.sh
