[project]
name = "graphoni"
version = "0.1.0"
description = "Python client, CLI, and MCP server for the Graphoni graph wiki"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "mcp[cli]>=1.9.1",
]

[project.urls]
Repository = "https://github.com/gwbischof/graphoni"

[project.scripts]
graphoni = "cli:main"
graphoni-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["client.py", "cli.py", "mcp_server.py"]
